--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: gray;
+    background-color: rgba(0, 0, 0, 0.123);
 	/* Use a system font, if none are available use an available sans-sarif   font */
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -21,4 +21,8 @@ div {
   font-size: 8vmin;
   text-align: center;
   vertical-align: middle;
+}
+
+button{
+  max-width: 100px;
 }
