--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: hello-denver-bold;
+  src: url('../assets/hellodenverdisplaybold_v1.6.ttf');
+}
+
 body {
   justify-content: center;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -52,21 +57,30 @@ section.board {
   grid-template-rows: repeat(3, 15vmin);
   grid-template-columns: repeat(3, 15vmin);
   grid-gap: 0vmin;
+
+
+  background: linear-gradient(to top right, rgb(255, 176, 85), rgb(255, 0, 255));
+  background-clip:text;
+
 }
 
 div.sqr {
   /* border: 1px solid black; */
   font-size: 8vmin;
   text-align: center;
-  vertical-align: middle;
-  color:white;
+  /* vertical-align: middle; */
+  color: white;
   /* max-width: 10vmin;
   max-height: 10vmin; */
 
   display:flex;
   flex-direction: column;
   align-items: center;
-  
+  font-family: hello-denver-bold, sans-serif;
+  font-size: 15vmin;
+
+  -moz-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 
 .insideV {
@@ -83,9 +97,23 @@ div.sqr {
 }
 
 #reset{
-  margin-top: 20px;
+  margin-top: 40px;
   padding: 1vmin 2vmin;
-  font-size: 2vmin;
+  font-size: 3vmin;
+  font-family: Montserrat;
+  /* font-weight: bold; */
+  background-color: rgba(21,60,180,.8);
+  border:none;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  box-shadow: 0px 5px 5px rgb(148, 22, 127);
+  color: white;
+}
+#reset:hover{
+  background-color: rgba(21,60,180,1);
+}
+#reset:active{
+  box-shadow: inset 2px 2px 1px rgb(148,22,127)
 }
 
 .delorean{
