--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 body {
   justify-content: center;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	/* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
 	margin: 0;
   height: 100vh;
   display: flex;
@@ -32,8 +32,9 @@ body {
 
 #title{
   /* height: 11vmin; */
+  
   font-family: 'monoton';
-  font-weight: 900;
+  font-weight: 100;
   font-size: 9vmin;
   margin: 0;
   background: linear-gradient(to top right, rgb(26, 26, 199), rgb(255, 0, 255));
@@ -59,26 +60,25 @@ section.board {
   grid-gap: 0vmin;
 
 
-  background: linear-gradient(to top right, rgb(255, 176, 85), rgb(255, 0, 255));
+  background: linear-gradient(to top right, rgb(255, 255, 0), rgb(246, 46, 149));
   background-clip:text;
-
+  -webkit-background-clip: text;
 }
 
-div.sqr {
-  /* border: 1px solid black; */
+div.sqr{
+  width:99%;
+  height:99%;
   font-size: 8vmin;
   text-align: center;
-  /* vertical-align: middle; */
-  color: white;
-  /* max-width: 10vmin;
-  max-height: 10vmin; */
-
+  text-shadow:
+  0px 0px 10px rgb(246,46,151),
+  0px 0px 30px rgb(246,46,151)
+    ;
   display:flex;
   flex-direction: column;
   align-items: center;
   font-family: hello-denver-bold, sans-serif;
   font-size: 15vmin;
-
   -moz-text-fill-color: transparent;
   -webkit-text-fill-color: transparent;
 }
@@ -92,7 +92,7 @@ div.sqr {
   border-bottom: 2px solid rgb(255, 255, 255);
 }
 
-#sq4{
+#sqrW4{
   border: 2px solid rgb(255, 255, 255);
 }
 
@@ -133,28 +133,37 @@ img{
 /* @media (max-height: ) */
 
 #d1{
-  left:-150px;
-  top: -13vmin;
+  left: 150px;
+  top: -17vmin;
   width: 25px;
 }
 #d2{
-  left:-150px;
-  top:-10vmin;
+  left: 150px;
+  top:-15vmin;
   width: 35px;
 }
 #d3{
-  left:-150px;
-  top:-10vmin;
+  left: 150px;
+  top:-13vmin;
 }
 #d4{
-  left:-150px;
-  top:-40px;
+  left: 150px;
+  top: -10vmin;
   width: 65px;
 }
 #d5{
-  left:-150px;
-  top:-0px;
+  left: 150px;
+  top:-8vmin;
   width: 75px;
+}
+#d6{
+  left: 150px;
+  top:-5vmin;
+  width: 90px;
+}
+#d7{
+  left: 150px;
+  width: 100px;
 }
 
 #anim{
