--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* 
+  Tic Tac Toe - style.css
+  Due: 12 Dec. 2022
+  Coded by Patrick Kelly.
+*/
+
 @font-face {
   font-family: hello-denver-bold;
   src: url('../assets/hellodenverdisplaybold_v1.6.ttf');
@@ -5,8 +11,6 @@
 
 body {
   justify-content: center;
-	/* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
 	margin: 0;
   height: 100vh;
   display: flex;
@@ -15,14 +19,8 @@ body {
   user-select: none;
   background-image: url('../assets/ttt_vape_bg.png');
   background-size:cover;
-  /* background-repeat: no-repeat; */
   overflow-x: hidden;
-  /* background-repeat: no-repeat; */
 }
-
-/* @media { min-width: ;
-  
-} */
 
 .container {
   display:flex;
@@ -31,15 +29,12 @@ body {
 }
 
 #title{
-  /* height: 11vmin; */
-  
   font-family: 'monoton';
-  font-weight: 100;
+  font-weight: 100; /*This stops chrome from mashing the letters' lines into a solid block letter.*/
   font-size: 9vmin;
   margin: 0;
   background: linear-gradient(to top right, rgb(26, 26, 199), rgb(255, 0, 255));
   background-clip:text;
-
   -moz-background-clip: text;
   -webkit-background-clip: text;
   -moz-text-fill-color: transparent;
@@ -58,8 +53,6 @@ section.board {
   grid-template-rows: repeat(3, 15vmin);
   grid-template-columns: repeat(3, 15vmin);
   grid-gap: 0vmin;
-
-
   background: linear-gradient(to top right, rgb(255, 255, 0), rgb(246, 46, 149));
   background-clip:text;
   -webkit-background-clip: text;
@@ -71,9 +64,8 @@ div.sqr{
   font-size: 8vmin;
   text-align: center;
   text-shadow:
-  0px 0px 10px rgb(246,46,151),
-  0px 0px 30px rgb(246,46,151)
-    ;
+    0px 0px 10px rgb(246,46,151),
+    0px 0px 30px rgb(246,46,151);
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -87,6 +79,7 @@ div.sqr{
   border-left: 2px solid rgb(255, 255, 255);
   border-right: 2px solid rgb(255, 255, 255);
 }
+
 .insideH {
   border-top: 2px solid rgb(255, 255, 255);
   border-bottom: 2px solid rgb(255, 255, 255);
@@ -101,7 +94,6 @@ div.sqr{
   padding: 1vmin 2vmin;
   font-size: 3vmin;
   font-family: Montserrat;
-  /* font-weight: bold; */
   background-color: rgba(21,60,180,.8);
   border:none;
   border-top-left-radius: 50%;
@@ -121,8 +113,11 @@ div.sqr{
   z-index: -1;
   width:50px;
   display:flex;
+  left: -150px;
 }
+
 .delHide{
+  /* This might be depreciated */
   display:none;
 }
 
@@ -130,39 +125,31 @@ img{
   max-width: 100%;
   max-height: 100%;
 }
-/* @media (max-height: ) */
 
 #d1{
-  left: 150px;
   top: -17vmin;
   width: 25px;
 }
 #d2{
-  left: 150px;
   top:-15vmin;
   width: 35px;
 }
 #d3{
-  left: 150px;
   top:-13vmin;
 }
 #d4{
-  left: 150px;
   top: -10vmin;
   width: 65px;
 }
 #d5{
-  left: 150px;
   top:-8vmin;
   width: 75px;
 }
 #d6{
-  left: 150px;
   top:-5vmin;
   width: 90px;
 }
 #d7{
-  left: 150px;
   width: 100px;
 }
 
